--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,8 +2,12 @@ name: Auto Sync Fork with Releases
 
 on:
   schedule:
-    - cron: '0 2 * * *'  # 每天 UTC 4 点自动运行
+    - cron: '0 20 * * *'  # 每天 UTC 20 点自动运行
   workflow_dispatch:      # 允许手动触发
+
+permissions:
+  contents: write
+  actions: read
 
 jobs:
   sync-fork:
@@ -28,37 +32,50 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gh
 
-      # 3️⃣ 配置 Git 和认证
-      - name: Configure git and authentication
+      # 3️⃣ 配置 Git
+      - name: Configure git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
-          # 设置认证URL
-          AUTH_URL="https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
-          echo "AUTH_URL=$AUTH_URL" >> $GITHUB_ENV
 
       # 4️⃣ 备份工作流文件
       - name: Backup workflow files
         run: |
           mkdir -p /tmp/backup
-          # 备份所有工作流文件
-          if [ -d ".github/workflows" ]; then
-            cp -r .github/workflows/* /tmp/backup/
-            echo "Backed up workflow files"
+          # 只备份同步工作流本身
+          if [ -f ".github/workflows/sync.yml" ]; then
+            cp .github/workflows/sync.yml /tmp/backup/
+            echo "Backed up sync workflow"
           else
-            echo "No workflow files found to backup"
+            echo "No sync workflow found to backup"
           fi
+
+      # 4.5️⃣ 删除所有可能导致问题的工作流文件
+      - name: Remove problematic workflow files
+        run: |
+          # 删除所有可能触发构建的工作流文件
+          rm -f .github/workflows/build.yml 2>/dev/null || true
+          rm -f .github/workflows/android.yml 2>/dev/null || true
+          rm -f .github/workflows/ci.yml 2>/dev/null || true
+          rm -f .github/workflows/release.yml 2>/dev/null || true
+          echo "Removed problematic workflow files"
+          
+          # 删除 Android 签名配置文件
+          rm -f android/key.properties 2>/dev/null || true
+          rm -f android/app/android_keystore.jks 2>/dev/null || true
+          # 删除可能引用这些文件的 Gradle 配置
+          sed -i '/android_keystore/d' android/app/build.gradle 2>/dev/null || true
+          echo "Removed Android config files"
 
       # 5️⃣ 添加上游仓库并获取所有内容
       - name: Add upstream and fetch
         run: |
           git remote remove upstream 2>/dev/null || true
-          git remote add upstream https://github.com/5VNetwork/vproxy.git
+          git remote add upstream https://github.com/MatsuriDayo/NekoBoxForAndroid.git
           git fetch upstream --tags --force --prune
           git fetch upstream --force --prune '+refs/heads/*:refs/remotes/upstream/*'
 
-      # 6️⃣ 同步所有分支（保留工作流文件）- 修复合并错误
+      # 6️⃣ 同步所有分支（保留工作流文件）
       - name: Sync branches with workflow preservation
         run: |
           # 获取默认分支名称
@@ -84,14 +101,13 @@ jobs:
               # 对于默认分支，使用合并而不是重置，以保留工作流文件
               if [ "$branch_name" = "$default_branch" ]; then
                 echo "Merging upstream changes to default branch (preserving workflows)"
-                # 添加 --allow-unrelated-histories 参数以允许合并不相关的历史
-                git merge --no-commit --allow-unrelated-histories upstream/$branch_name
+                git merge --no-commit upstream/$branch_name
                 
                 # 恢复工作流文件
-                if [ -d "/tmp/backup" ]; then
+                if [ -f "/tmp/backup/sync.yml" ]; then
                   mkdir -p .github/workflows
-                  cp -r /tmp/backup/* .github/workflows/
-                  git add .github/workflows/
+                  cp /tmp/backup/sync.yml .github/workflows/
+                  git add .github/workflows/sync.yml
                 fi
                 
                 # 提交合并
@@ -109,55 +125,46 @@ jobs:
             
             # 推送到 origin - 使用认证信息
             echo "Pushing $branch_name to origin"
-            git push ${{ env.AUTH_URL }} $branch_name --force
+            git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git $branch_name --force
           done
 
-      # 7️⃣ 改进的标签同步方法（保持时间戳并使用认证）
-      - name: Sync tags with timestamp preservation
+      # 7️⃣ 同步所有标签（跳过包含工作流文件的标签）
+      - name: Sync tags selectively
         run: |
+          # 删除所有本地标签（避免冲突）
+          git tag -l | xargs git tag -d 2>/dev/null || true
           # 获取上游所有标签
           git fetch upstream --tags --force
           
-          # 获取所有上游标签列表
-          upstream_tags=$(git ls-remote --tags upstream | awk '{print $2}' | cut -d '/' -f 3 | sort -V)
-          
-          # 逐个处理每个标签，保持时间戳
-          for tag in $upstream_tags; do
-            echo "Processing tag: $tag"
-            
-            # 检查标签是否已存在
-            if git rev-parse "$tag" >/dev/null 2>&1; then
-              # 删除现有标签
-              git tag -d "$tag"
-              # 删除远程标签（使用认证）
-              git push ${{ env.AUTH_URL }} --delete "$tag" 2>/dev/null || true
+          # 获取所有标签
+          git tag -l | while read tag; do
+            # 检查标签是否包含工作流文件
+            if git ls-tree -r $tag | grep -q ".github/workflows/"; then
+              echo "Skipping tag $tag (contains workflow files)"
+            else
+              echo "Pushing tag $tag"
+              git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git $tag --force || echo "Failed to push tag $tag"
             fi
-            
-            # 从上游获取标签及其时间戳
-            git fetch upstream "+refs/tags/$tag:refs/tags/$tag"
-            
-            # 推送标签到origin（使用认证）
-            git push ${{ env.AUTH_URL }} "refs/tags/$tag" --force
           done
 
-      # 8️⃣ 获取上游发布列表和本地发布列表（按版本号排序）
+      # 8️⃣ 获取上游发布列表和本地发布列表
       - name: Get release lists
         id: get_releases
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # 获取上游所有发布（按版本号排序）
+          # 获取上游所有发布（按创建时间排序）
           echo "Getting upstream releases..."
           upstream_releases=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            "https://api.github.com/repos/5VNetwork/vproxy/releases?per_page=100" | \
-            jq -r '.[].tag_name' | sort -V)
+            "https://api.github.com/repos/MatsuriDayo/NekoBoxForAndroid/releases?per_page=100" | \
+            jq -r 'sort_by(.created_at) | .[].tag_name')
           echo "Upstream releases: $upstream_releases"
           
-          # 获取本地所有发布（按版本号排序）
+          # 获取本地所有发布（按创建时间排序）
           echo "Getting local releases..."
           local_releases=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/${{ github.repository }}/releases?per_page=100" | \
-            jq -r '.[].tag_name' | sort -V)
+            jq -r 'sort_by(.created_at) | .[].tag_name')
           echo "Local releases: $local_releases"
           
           # 找出需要同步的新发布
@@ -173,7 +180,7 @@ jobs:
           # 设置输出变量
           echo "new_releases=$new_releases" >> $GITHUB_OUTPUT
 
-      # 9️⃣ 只下载新发布的资源（按版本号顺序）
+      # 9️⃣ 只下载新发布的资源
       - name: Download new release assets
         if: steps.get_releases.outputs.new_releases != ''
         run: |
@@ -182,17 +189,13 @@ jobs:
           
           echo "New releases to process: $new_releases"
           
-          # 按版本号排序新发布
-          sorted_releases=$(echo "$new_releases" | tr ' ' '\n' | sort -V | tr '\n' ' ')
-          echo "Sorted releases: $sorted_releases"
-          
-          # 循环处理每个新发布（按版本号顺序）
-          for tag_name in $sorted_releases; do
+          # 循环处理每个新发布
+          for tag_name in $new_releases; do
             echo "Processing new release: $tag_name"
             
-            # 获取发布详情
+            # 获取发布详情 - 修复：使用正确的上游仓库URL
             release_info=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              "https://api.github.com/repos/5VNetwork/vproxy/releases/tags/$tag_name")
+              "https://api.github.com/repos/MatsuriDayo/NekoBoxForAndroid/releases/tags/$tag_name")
             
             # 检查是否有错误
             if echo "$release_info" | jq -e '.message' > /dev/null 2>&1; then
@@ -202,14 +205,12 @@ jobs:
             
             release_id=$(echo "$release_info" | jq -r '.id')
             created_at=$(echo "$release_info" | jq -r '.created_at')
-            published_at=$(echo "$release_info" | jq -r '.published_at')
-            
-            echo "Release ID: $release_id, Created: $created_at, Published: $published_at"
+            echo "Release ID: $release_id, Created at: $created_at"
             
             # 为每个标签创建子目录
             mkdir -p "releases/$tag_name"
             
-            # 保存发布信息到文件（包括时间戳）
+            # 保存发布信息到文件（包括创建时间）
             echo "$release_info" > "releases/$tag_name/release_info.json"
             
             # 下载每个资源
@@ -232,20 +233,37 @@ jobs:
             sleep 2
           done
 
-      # 🔟 创建新的 GitHub Releases（按版本号顺序）
-      - name: Create new GitHub Releases with original timestamps
+      # 🔟 按照上游创建时间顺序创建新的 GitHub Releases
+      - name: Create new GitHub Releases in order
         if: steps.get_releases.outputs.new_releases != ''
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           new_releases="${{ steps.get_releases.outputs.new_releases }}"
           
-          # 按版本号排序新发布
-          sorted_releases=$(echo "$new_releases" | tr ' ' '\n' | sort -V | tr '\n' ' ')
-          echo "Sorted releases for creation: $sorted_releases"
-          
-          # 遍历所有新发布的资源（按版本号顺序）
-          for tag_name in $sorted_releases; do
+          # 首先，收集所有需要创建的发布的信息（标签名和创建时间）
+          declare -A release_dates
+          for tag_name in $new_releases; do
+            tag_dir="releases/$tag_name"
+            release_info_file="$tag_dir/release_info.json"
+            if [ -f "$release_info_file" ]; then
+              created_at=$(jq -r '.created_at' "$release_info_file")
+              # 将日期转换为时间戳以便排序
+              timestamp=$(date -d "$created_at" +%s)
+              release_dates[$tag_name]=$timestamp
+            else
+              # 如果没有找到发布信息文件，使用当前时间戳
+              release_dates[$tag_name]=$(date +%s)
+            fi
+          done
+
+          # 按照时间戳排序标签名
+          # 由于 Bash 关联数组不能直接排序，我们将标签名和时间戳放入数组然后排序
+          # 创建一个数组，元素格式为：时间戳:标签名
+          for tag_name in "${!release_dates[@]}"; do
+            printf "%d:%s\n" "${release_dates[$tag_name]}" "$tag_name"
+          done | sort -n | while IFS=: read -r timestamp tag_name; do
+            # 现在按照排序后的顺序处理每个标签
             tag_dir="releases/$tag_name"
             
             if [ -d "$tag_dir" ]; then
@@ -259,7 +277,6 @@ jobs:
                 prerelease=$(jq -r '.prerelease' "$release_info_file")
                 draft=$(jq -r '.draft' "$release_info_file")
                 created_at=$(jq -r '.created_at' "$release_info_file")
-                published_at=$(jq -r '.published_at' "$release_info_file")
                 
                 # 设置发布参数
                 prerelease_flag=""
@@ -287,67 +304,28 @@ jobs:
                 
                 echo "Found ${#asset_files[@]} asset files for $tag_name"
                 
-                # 创建发布 - 使用API以保持原始时间戳
+                # 创建发布 - 关键修改：添加 --repo 参数
                 if [ -n "$release_name" ] && [ "$release_name" != "null" ]; then
-                  # 使用GitHub API创建发布，以便设置创建时间
-                  release_json=$(jq -n \
-                    --arg tag_name "$tag_name" \
-                    --arg name "$release_name" \
-                    --arg body "$release_notes" \
-                    --argjson prerelease "$prerelease" \
-                    --argjson draft "$draft" \
-                    --arg published_at "$published_at" \
-                    '{
-                      "tag_name": $tag_name,
-                      "name": $name,
-                      "body": $body,
-                      "draft": $draft,
-                      "prerelease": $prerelease,
-                      "published_at": (if $published_at != "null" then $published_at else null end)
-                    }')
-                  
-                  release_id=$(curl -s -H "Authorization: token $GH_TOKEN" \
-                    -H "Accept: application/vnd.github.v3+json" \
-                    -X POST \
-                    -d "$release_json" \
-                    "https://api.github.com/repos/${{ github.repository }}/releases" | \
-                    jq -r '.id')
-                  
-                  if [ "$release_id" = "null" ]; then
-                    echo "Failed to create release $tag_name, trying with gh CLI"
-                    # 回退到gh CLI
-                    gh release create --repo ${{ github.repository }} "$tag_name" \
-                      --title "$release_name" \
-                      --notes "$release_notes" \
-                      $prerelease_flag \
-                      $draft_flag || echo "Release $tag_name may already exist"
-                  else
-                    echo "Created release $tag_name with ID $release_id"
-                  fi
+                  # 先创建发布，然后单独上传每个文件
+                  gh release create --repo ${{ github.repository }} "$tag_name" \
+                    --title "$release_name" \
+                    --notes "$release_notes" \
+                    $prerelease_flag \
+                    $draft_flag \
+                    --target main || echo "Release $tag_name may already exist"
                 else
-                  # 使用gh CLI创建发布
                   gh release create --repo ${{ github.repository }} "$tag_name" \
                     --notes "$release_notes" \
                     $prerelease_flag \
-                    $draft_flag || echo "Release $tag_name may already exist"
+                    $draft_flag \
+                    --target main || echo "Release $tag_name may already exist"
                 fi
                 
-                # 如果使用API创建成功，上传资源
-                if [ -n "$release_id" ] && [ "$release_id" != "null" ]; then
-                  for asset_file in "${asset_files[@]}"; do
-                    echo "Uploading asset: $asset_file"
-                    curl -s -H "Authorization: token $GH_TOKEN" \
-                      -H "Content-Type: $(file -b --mime-type "$asset_file")" \
-                      --data-binary @"$asset_file" \
-                      "https://uploads.github.com/repos/${{ github.repository }}/releases/$release_id/assets?name=$(basename "$asset_file")" || echo "Failed to upload $asset_file"
-                  done
-                else
-                  # 使用gh CLI上传资源
-                  for asset_file in "${asset_files[@]}"; do
-                    echo "Uploading asset: $asset_file"
-                    gh release upload --repo ${{ github.repository }} "$tag_name" "$asset_file" || echo "Failed to upload $asset_file"
-                  done
-                fi
+                # 上传每个资产文件 - 关键修改：添加 --repo 参数
+                for asset_file in "${asset_files[@]}"; do
+                  echo "Uploading asset: $asset_file"
+                  gh release upload --repo ${{ github.repository }} "$tag_name" "$asset_file" || echo "Failed to upload $asset_file"
+                done
                 
                 echo "Created release: $tag_name with ${#asset_files[@]} assets"
               else
